# shipments

./: .env.example  .gitignore  README.md  setup.cfg
shipments/: settings.py  urls.py
shipments/api/: models.py  serializers.py  urls.py  views.py
shipments/api/migrations/: 0001_initial.py
shipments/api/templates/: swagger-ui.html
