[metadata]
name = shipments
version = attr: shipments.__version__
description = API for Shipments
url = https://github.com/americocastro22/shipments
license = Proprietary
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any

[options]
python_requires = >=3.10
install_requires =
    Django~=3.2.5
    djangorestframework~=3.13.1
    django-environ~=0.9.0
    pyyaml~=6.0
    uritemplate~=4.1.1
